src/output/snapshots/pg_migration_lint__output__sonarqube__tests__engine_id_is_on_rules_not_issues.snap
---
source: src/output/sonarqube.rs
expression: parsed
---
{
  "issues": [
    {
      "effortMinutes": 5,
      "primaryLocation": {
        "filePath": "a.sql",
        "message": "first",
        "textRange": {
          "endLine": 1,
          "startLine": 1
        }
      },
      "ruleId": "PGM001"
    },
    {
      "effortMinutes": 15,
      "primaryLocation": {
        "filePath": "b.sql",
        "message": "second",
        "textRange": {
          "endLine": 2,
          "startLine": 2
        }
      },
      "ruleId": "PGM501"
    }
  ],
  "rules": [
    {
      "cleanCodeAttribute": "COMPLETE",
      "description": "Missing CONCURRENTLY on CREATE INDEX. See https://robert-sjoblom.github.io/pg-migration-lint/rules#pgm001",
      "engineId": "pg-migration-lint",
      "id": "PGM001",
      "impacts": [
        {
          "severity": "HIGH",
          "softwareQuality": "RELIABILITY"
        }
      ],
      "name": "Missing CONCURRENTLY on CREATE INDEX",
      "severity": "CRITICAL",
      "type": "BUG"
    },
    {
      "cleanCodeAttribute": "EFFICIENT",
      "description": "Foreign key without covering index on referencing columns. See https://robert-sjoblom.github.io/pg-migration-lint/rules#pgm501",
      "engineId": "pg-migration-lint",
      "id": "PGM501",
      "impacts": [
        {
          "severity": "MEDIUM",
          "softwareQuality": "MAINTAINABILITY"
        }
      ],
      "name": "Foreign key without covering index on referencing columns",
      "severity": "MAJOR",
      "type": "CODE_SMELL"
    }
  ]
}
