src/output/snapshots/pg_migration_lint__output__sonarqube__tests__multi_file_findings_have_correct_file_paths.snap
---
source: src/output/sonarqube.rs
expression: parsed
---
{
  "issues": [
    {
      "effortMinutes": 5,
      "primaryLocation": {
        "filePath": "db/migrations/V001__create_tables.sql",
        "message": "index issue in file A",
        "textRange": {
          "endLine": 5,
          "startLine": 5
        }
      },
      "ruleId": "PGM001"
    },
    {
      "effortMinutes": 15,
      "primaryLocation": {
        "filePath": "db/migrations/V002__add_fk.sql",
        "message": "missing FK index in file B",
        "textRange": {
          "endLine": 12,
          "startLine": 10
        }
      },
      "ruleId": "PGM501"
    },
    {
      "effortMinutes": 10,
      "primaryLocation": {
        "filePath": "db/changelog/003_audit.sql",
        "message": "no primary key in file C",
        "textRange": {
          "endLine": 1,
          "startLine": 1
        }
      },
      "ruleId": "PGM502"
    }
  ],
  "rules": [
    {
      "cleanCodeAttribute": "COMPLETE",
      "description": "Missing CONCURRENTLY on CREATE INDEX. See https://robert-sjoblom.github.io/pg-migration-lint/rules#pgm001",
      "engineId": "pg-migration-lint",
      "id": "PGM001",
      "impacts": [
        {
          "severity": "HIGH",
          "softwareQuality": "RELIABILITY"
        }
      ],
      "name": "Missing CONCURRENTLY on CREATE INDEX",
      "severity": "CRITICAL",
      "type": "BUG"
    },
    {
      "cleanCodeAttribute": "EFFICIENT",
      "description": "Foreign key without covering index on referencing columns. See https://robert-sjoblom.github.io/pg-migration-lint/rules#pgm501",
      "engineId": "pg-migration-lint",
      "id": "PGM501",
      "impacts": [
        {
          "severity": "MEDIUM",
          "softwareQuality": "MAINTAINABILITY"
        }
      ],
      "name": "Foreign key without covering index on referencing columns",
      "severity": "MAJOR",
      "type": "CODE_SMELL"
    },
    {
      "cleanCodeAttribute": "COMPLETE",
      "description": "Table without primary key. See https://robert-sjoblom.github.io/pg-migration-lint/rules#pgm502",
      "engineId": "pg-migration-lint",
      "id": "PGM502",
      "impacts": [
        {
          "severity": "MEDIUM",
          "softwareQuality": "MAINTAINABILITY"
        }
      ],
      "name": "Table without primary key",
      "severity": "MAJOR",
      "type": "CODE_SMELL"
    }
  ]
}
