src/output/snapshots/pg_migration_lint__output__sonarqube__tests__round_trip_sonarqube_all_fields_verified.snap
---
source: src/output/sonarqube.rs
expression: parsed
---
{
  "issues": [
    {
      "effortMinutes": 5,
      "primaryLocation": {
        "filePath": "db/migrations/V042__add_index.sql",
        "message": "CREATE INDEX on 'orders' should use CONCURRENTLY.",
        "textRange": {
          "endLine": 3,
          "startLine": 3
        }
      },
      "ruleId": "PGM001"
    },
    {
      "effortMinutes": 15,
      "primaryLocation": {
        "filePath": "db/migrations/V043__add_fk.sql",
        "message": "FK on 'orders.customer_id' has no covering index.",
        "textRange": {
          "endLine": 12,
          "startLine": 10
        }
      },
      "ruleId": "PGM501"
    },
    {
      "effortMinutes": 10,
      "primaryLocation": {
        "filePath": "db/migrations/V042__add_index.sql",
        "message": "Table 'events' has UNIQUE NOT NULL but no PRIMARY KEY.",
        "textRange": {
          "endLine": 20,
          "startLine": 20
        }
      },
      "ruleId": "PGM503"
    }
  ],
  "rules": [
    {
      "cleanCodeAttribute": "COMPLETE",
      "description": "PGM001 — Missing CONCURRENTLY on CREATE INDEX\n\nWhat it detects:\nA CREATE INDEX statement that does not use the CONCURRENTLY option,\ntargeting a table that already exists in the database (i.e., the table\nwas not created in the same set of changed files).\n\nWhy it's dangerous:\nWithout CONCURRENTLY, PostgreSQL acquires an ACCESS EXCLUSIVE lock on\nthe table for the entire duration of the index build. This blocks ALL\nqueries — reads and writes — on the table. For large tables, index\ncreation can take minutes or hours, causing extended downtime.\n\nExample (bad):\nCREATE INDEX idx_orders_status ON orders (status);\n\nFix:\nCREATE INDEX CONCURRENTLY idx_orders_status ON orders (status);\n\nNote: CONCURRENTLY cannot run inside a transaction. If your migration\nframework wraps each file in a transaction (e.g., Liquibase default),\nyou must also disable that. See PGM003.\n\nThis rule does NOT fire when the table is created in the same set of\nchanged files, because locking an empty/new table is harmless.",
      "engineId": "pg-migration-lint",
      "id": "PGM001",
      "impacts": [
        {
          "severity": "HIGH",
          "softwareQuality": "RELIABILITY"
        }
      ],
      "name": "Missing CONCURRENTLY on CREATE INDEX",
      "severity": "CRITICAL",
      "type": "BUG"
    },
    {
      "cleanCodeAttribute": "EFFICIENT",
      "description": "PGM501 — Foreign key without covering index\n\nWhat it detects:\nA FOREIGN KEY constraint where the referencing table has no index\nwhose leading columns match the FK columns in order.\n\nWhy it's dangerous:\nWhen a row is deleted or updated in the referenced (parent) table,\nPostgreSQL must check that no rows in the referencing (child) table\nstill reference the old value. Without an index on the FK columns,\nthis check performs a sequential scan of the entire child table —\nonce per affected parent row. This can cause severe performance\ndegradation and lock contention.\n\nExample (bad):\nALTER TABLE order_items\nADD CONSTRAINT fk_order\nFOREIGN KEY (order_id) REFERENCES orders(id);\n-- No index on order_items(order_id)\n\nFix:\nCREATE INDEX idx_order_items_order_id\nON order_items (order_id);\nALTER TABLE order_items\nADD CONSTRAINT fk_order\nFOREIGN KEY (order_id) REFERENCES orders(id);\n\nPrefix matching: FK columns (a, b) are covered by index (a, b) or\n(a, b, c) but NOT by (b, a) or (a). Column order matters.\n\nThe check uses the catalog state AFTER the entire file is processed,\nso creating the index later in the same file avoids a false positive.",
      "engineId": "pg-migration-lint",
      "id": "PGM501",
      "impacts": [
        {
          "severity": "MEDIUM",
          "softwareQuality": "MAINTAINABILITY"
        }
      ],
      "name": "Foreign key without covering index on referencing columns",
      "severity": "MAJOR",
      "type": "CODE_SMELL"
    },
    {
      "cleanCodeAttribute": "CONVENTIONAL",
      "description": "PGM503 — UNIQUE NOT NULL used instead of PRIMARY KEY\n\nWhat it detects:\nA table that has no PRIMARY KEY but has at least one UNIQUE constraint\nwhere all constituent columns are NOT NULL. This combination is\nfunctionally equivalent to a PK.\n\nWhy it matters:\nWhile UNIQUE NOT NULL is functionally equivalent to PRIMARY KEY,\nusing PRIMARY KEY is more conventional and explicit. Tools, ORMs,\nand database administrators expect PK as the standard way to\nidentify rows. Using UNIQUE NOT NULL may confuse readers and\nprevent some tools from auto-detecting the identity column.\n\nExample (flagged):\nCREATE TABLE users (\nemail text NOT NULL UNIQUE,\nname text\n);\n\nFix:\nCREATE TABLE users (\nemail text PRIMARY KEY,\nname text\n);\n\nNote: When PGM503 fires, PGM502 (table without PK) does NOT fire\nfor the same table, since the situation is already flagged.",
      "engineId": "pg-migration-lint",
      "id": "PGM503",
      "impacts": [
        {
          "severity": "LOW",
          "softwareQuality": "MAINTAINABILITY"
        }
      ],
      "name": "UNIQUE NOT NULL used instead of PRIMARY KEY",
      "severity": "INFO",
      "type": "CODE_SMELL"
    }
  ]
}
