src/output/snapshots/pg_migration_lint__output__sonarqube__tests__single_finding_produces_valid_json.snap
---
source: src/output/sonarqube.rs
assertion_line: 109
expression: parsed
---
{
  "issues": [
    {
      "engineId": "pg-migration-lint",
      "primaryLocation": {
        "filePath": "db/migrations/V042__add_index.sql",
        "message": "CREATE INDEX on existing table 'orders' should use CONCURRENTLY.",
        "textRange": {
          "endLine": 3,
          "startLine": 3
        }
      },
      "ruleId": "PGM001",
      "severity": "CRITICAL",
      "type": "BUG"
    }
  ]
}
